# Master-CRAFT

./: .gitignore  CMakeLists.txt  README.md  slide.odp
CMake/: FindFreeType2.cmake  FindGLEW.cmake  FindHarfBuzz.cmake
GLImac-Template-build/: CMakeCache.txt  Makefile  cmake_install.cmake
GLImac-Template-build/TP_template/: Makefile  TP_template_SDLtemplate  cmake_install.cmake
GLImac-Template-build/glimac/: Makefile  cmake_install.cmake
GLImac-Template/glimac/src/: Cube.cpp
include/glimac/: BBox.hpp  Cone.hpp  FilePath.hpp  Geometry.hpp  Image.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  Sphere.hpp  common.hpp  stb_image.h
include/mastercraft/cube/: Chunk.hpp  ColumnGenerator.hpp  CubeDirection.hpp  CubeFace.hpp  CubeType.hpp  CubeVertex.hpp  SuperChunk.hpp  TreeGenerator.hpp
include/mastercraft/entity/: EntityVertex.hpp  IEntity.hpp  Magie.hpp  Magie2.hpp  Robot.hpp  Skybox.hpp  Slime.hpp  SphereVertex.hpp  Spider.hpp  Sun.hpp
include/mastercraft/game/: Camera.hpp  ChunkManager.hpp  ConfigManager.hpp  Debug.hpp  Game.hpp  InputManager.hpp  Score.hpp  ShaderManager.hpp  Statistics.hpp  WindowManager.hpp
include/mastercraft/shader/: Cubemap.hpp  Shader.hpp  ShaderCubemap.hpp  ShaderMultiTexture.hpp  ShaderTexture.hpp  Texture.hpp
include/mastercraft/util/: AStar.hpp  AStarNew.hpp  C3GATools.hpp  FileReader.hpp  FreeflyCamera.hpp  INonCopyable.hpp  ISingleton.hpp  Image.hpp  Noise.hpp  NonCopyable.hpp  OBJ.hpp  PPM.h  Parser.hpp  ParserException.hpp  Point.hpp  Program.hpp  Random.hpp  SDLWindowManager.hpp  SimplexNoise.hpp  Singleton.hpp  TrackballCamera.hpp  Uuid.hpp
include/mastercraft/world/: Chunk.hpp  Cube.hpp  CubeDirection.hpp  CubeFace.hpp  CubeModel.hpp  CubeType.hpp  CubeVertex.hpp  FreeflyCamera.hpp  PerlinNoise.hpp  (+3 more)
shader/: 3D.fs.glsl  3D.vs.glsl  Light3D.fs.glsl  cube.fs.glsl  cube.vs.glsl  cubeShader.fs.glsl  cubeShader.vs.glsl  debug.fs.glsl  debug.vs.glsl  entityShader.fs.glsl  light3D.fs.glsl  night3D.fs.glsl  npc.fs.glsl  npc.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  slime.fs.glsl  sun.fs.glsl  sun.vs.glsl
src/glimac/: Cone.cpp  Geometry.cpp  Image.cpp  Program.cpp  SDLWindowManager.cpp  Shader.cpp  Sphere.cpp  stb_image.h  tiny_obj_loader.cpp  tiny_obj_loader.h
src/mastercraft/: main.cpp
(+107 files in other folders)
